--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1196,17 +1196,19 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 
 @media (display-mode: standalone) {
   /* All installed PWAs */
- body.light .has-app{display: block !important;}
- body.light .no-app{display: none !important;}
+.has-app{display: block !important;}
+.no-app{display: none !important;}
 }
 
-// remove to go live
- body.light .has-app{display: block !important;}
- body.light .no-app{display: none !important;}
-// 
 
+.has-app{display: none !important;}
+.no-app{display: block !important;}
+
+
+/*
 body.dark .has-app{display:none !important;}
 body.dark .no-app{display:block !important;}
+*/
 
 
 
