--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1200,15 +1200,13 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 .no-app{display: none !important;}
 }
 
+// remove to go live //
+body.dark .has-app{display: block !important;}
+body.dark .no-app{display: none !important;}
+ 
 
-.has-app{display: none !important;}
-.no-app{display: block !important;}
-
-
-/*
-body.dark .has-app{display:none !important;}
-body.dark .no-app{display:block !important;}
-*/
+.has-app{display:none !important;}
+.no-app{display:block !important;}
 
 
 
