--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1183,7 +1183,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 
 
 
-.no-app  .galgrad  {
+.no-app .galgrad  {
 	position:relative;
 	color:#777 !important;
 	cursor: not-allowed !important;
@@ -1193,6 +1193,8 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 
 
 
+.has-app{display:none;}
+.no-app{display:block;}
 
 @media (display-mode: standalone) {
   /* All installed PWAs */
@@ -1207,8 +1209,7 @@ body.dark .no-app{display: none !important;}
 */
 
 
-.has-app{display:none !important;}
-.no-app{display:block !important;}
+
 
 
 
