--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -677,7 +677,14 @@ div.column{ padding:1rem 0rem;}
 
 
 
-
+.pitch{
+	font-size:380%;
+	margin: 0;
+	text-transform: uppercase;
+	line-height: 1;
+	color: #fff;
+  	text-shadow: -1px -1px 0 #2f3e9c, 1px -1px 0 #2f3e9c, -1px 1px 0 #2f3e9c, 1px 1px 0 #2f3e9c, 1px 0px 0px #0d7abd, 0px 1px 0px #0d7abd, 2px 1px 0px #0d7abd, 1px 2px 0px #0d7abd, 3px 2px 0px #0d7abd, 2px 3px 0px #0d7abd, 4px 3px 0px #0d7abd, 3px 4px 0px #0d7abd, 5px 4px 0px #0d7abd, 3px 5px 0px #2f3e9c, 6px 5px 0px #2f3e9c;
+  	}
 
 
 
